DevOps/Pipelines/Argocd/Apps/Dev/basicYamlExample.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  labels:
    app: simple-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: simple-nginx
  type: NodePort
